k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-cicd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-cicd
  template:
    metadata:
      labels:
        app: demo-cicd
    spec:
      containers:
      - name: demo-cicd
        image: ghcr.io/shahryaraly/demo-cicd:latest
        ports:
        - containerPort: 80
